# MACOS_resources

./: .gitignore  .gitmodules  README.md
GMI/: CLAUDE.md  GMI.F  GMI.inc  GMIG.F  Makefile  README.md  call_GMI.m  optiixInit_jzlou.m  test_min.F  test_min2.F
GMI/regression/: README.md  bootstrap_reference.m  regression_main.m  run_regression.sh
GMI/regression/Rx/: Rx_e5hex1.in
GMI/regression/lib/: compare_within.m  init_e5hex1.m  init_optiix.m
GMI/regression/reference/: nominal_e5hex1.mat  nominal_optiix.mat  zern_response_e5hex1.mat  zern_response_optiix.mat
GMI/regression/tests/: test01_smoke_optiix.m  test02_nominal_repro_optiix.m  test03_zern_response_optiix.m  test04_smoke_e5hex1.m  test05_nominal_repro_e5hex1.m  test06_zern_response_e5hex1.m
GMI/test_ff/: SegDemo3.in  ZGD3.in  ff_hex1.in  ff_hex2.in  ff_pie.in  flat.txt  gmi_Init.m  gmi_Init_ff.m  iris_dp_ZGD.in  iris_dp_v14.in  ray_check.m  replay.m  test_gmi.m  test_gmi_ZGD.m  test_gmi_ff.m  zz.in
mmacos/: .gitignore  CLAUDE.md  Makefile  README.md  gen_mex_wrappers.py  mmacos_gen.F  mmacos_gen_cmds.txt  mmacos_mex.F  run_mmacos_tests.sh  test_macos_pkg.m  test_mmacos.m  test_state_after_roundtrip.m
mmacos/+macos/: Session.m  apodize.m  apodize_complex.m  cbm.m  complex_field.m  dx_at.m  elt_grating_any.m  elt_grating_fnd.m  get_elt_csys.m  get_elt_grating_dir.m  get_elt_grating_order.m  get_elt_grating_params.m  get_elt_grating_rulewidth.m  get_elt_grating_type.m  get_elt_psi.m  get_elt_rpt.m  get_elt_vpt.m  get_ray_info.m  get_src_sampling.m  get_src_wvl.m  has_rx.m  init.m  intensity.m  load_rx.m  modify.m  num_elt.m  opd.m  perturb.m  perturb_many.m  perturb_src.m  save_rx.m  set_elt_grating_dir.m  set_elt_grating_order.m  set_elt_grating_params.m  set_elt_grating_rulewidth.m  set_elt_grating_type.m  set_elt_psi.m  set_elt_rpt.m  set_elt_vpt.m  set_src_sampling.m  (+3 more)
mmacos/tests/: tCodeVApeMasksCirc.m  tCodeVApeMasksEllipse.m  tCodeVApeMasksPolygon.m  tCodeVApeMasksRect.m  tCodeVGrating.m  tCodeVObsMasksCirc.m  tCodeVObsMasksEllipse.m  tCodeVObsMasksPolygon.m  tCodeVObsMasksRect.m  tCrossSurface.m  tMacosPkg.m  tMacosSession.m  tMmacosCmd.m  tPerturbRoundtrip.m
mmacos/tests/private/: chk_polygon_pts.m  hexagon.m  poly_lines.m  ray_pos_at_srf_in_tangent_plane.m  rectangular_polygon.m  rx_fixture_path.m  rx_grating_001_data.m  rx_mask_params.m  tolerances.m
mmacos/tests/proper_compare/: macos_run_apodised_nf.m  macos_run_cass_ff.m  macos_run_coro_nfprop.m  macos_run_dm_phase.m  macos_run_pupil_to_pupil.m  macos_run_sphere_to_plane.m  proper_run_apodised_nf.m  proper_run_cass_ff.m  proper_run_coro_nfprop.m  proper_run_dm_phase.m  proper_run_pupil_to_pupil.m  proper_run_sphere_to_plane.m  tBandLimitedMask.m  tProperCompareCassFF.m  tProperCompareCassFFAberrations.m  tProperCompareCoroApodizer.m  tProperCompareCoroDMPhase.m  tProperCompareCoroNFprop.m  tProperCompareCoroPhase3.m
mmacos/tests/proper_compare/+apodizer/: band_limited_circle.m  build_apodised_mask.m  build_band_limited_mask.m  circle.m  gaussian_edge_taper.m
mmacos/tests/proper_compare/+geometries/: cass_farfield.m  coro_nfprop.m  coro_pupil_to_pupil.m  coro_sphere_to_plane.m
mmacos/tests/proper_compare/private/: centroid_loc.m  compare_and_record.m  crop_center.m  embed_macos_array_in_proper_grid.m  opd_shapes.m
pymacos/: .gitignore  CLAUDE.md  README.md  run_proper_tests.sh
pymacos/src/: instructions.txt  instructions_2.txt
pymacos/src/cmake/: CMakeLists.txt
pymacos/src/cmake/source/: pymacos.f90  pymacos.inc  pymacos_f2py.f90
pymacos/src/pymacos/: .pylintrc  __init__.py  macos.py  macos_param.txt  version.py
pymacos/tests/: conftest.py  context.py  macos_param.txt  rx_data.py  test_api_rx_grating.py  test_settings.py
pymacos/tests/Rx/: Grating_example_001.in  Rx_Cass_FarField.in  Rx_Coro.in  Rx_Coro_DM.in  Rx_Coro_FPM.in  Rx_Coro_FPM_Zern.in  Rx_Coro_FPM_Zern_vortex.in  Rx_Coro_FPM_Zern_vortex_oversized.in  Rx_Coro_FPM_Zern_vortex_oversized_noLyot.in  Rx_Coro_FPM_noLyot.in  Rx_Coro_noLyot.in  Rx_Mask_Parabolas_glb.in  __init__.py  e5hex1.in
pymacos/tests/proper_compare/: README.md  aberrations.py  apodizer.py  conftest.py  contrast.py  n_sweep.py  run_broadband_aberrations.py  run_broadband_nominal.py  run_broadband_vortex.py  run_n_sweep_phase5.py  test_band_limited_mask.py  test_cass_ff.py  test_cass_ff_aberrations.py  test_coro_aberrations.py  test_coro_apodizer.py  test_coro_contrast_curve.py  test_coro_dm_grid_self.py  test_coro_dm_phase.py  test_coro_nfprop.py  test_coro_nfprop_phase3.py  test_psf.py
pymacos/tests/proper_compare/geometries/: cass_farfield.py  circular_pupil_focus.py  coro_nfprop.py
pymacos/tests/sensitivities/: channels.py  dw_dx.py  dw_dz_zernike.py  jacobian.py  m2v.m  mimg.m  pad.m  run_dw_dx.sh  run_dw_dz_zernike.sh  v2m.m  verify_dwdz.m
pymacos/tests/sensitivities/results/: dw_dz_monzern_e5hex1.npz  dw_dz_monzern_zern_e5hex1.npz  dw_dz_zern_e5hex1.npz
rx_converter/codev/: cv2macos.seq
segmirmaker/: CLAUDE.md  CMakeLists.txt  README.md  SegMirMaker.f  makesegmirmaker.sh
segmirmaker/Archive/: SMPGe.for
segmirmaker/test_in/: e5hex2.in  e5mono.in  e5mx.in  e5pie.in  e5pieZ.in  e5seg1.in  ff_hex2.in  ffparent.in  monparent.in  psiparent.in  xx.in  zern41em5z155em3.txt
